--- a/blog.html
+++ b/blog.html
@@ -1,11 +1,11 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,400;1,700&family=Montserrat:wght@300;600;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <title>Contact Us</title>
+    <title>Blog</title>
 </head>
 <body>
     <header>
@@ -14,8 +14,8 @@
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M0 0H18.1129C31.1202 0 40.4058 12.3713 40.4058 24.0356V27.7332C40.4058 39.3974 31.1202 51.7689 18.1129 51.7689H0V0ZM37.6192 24.0356C37.6192 13.5132 29.2167 2.77333 18.1129 2.77333H2.78661V48.9956H18.1129C29.2167 48.9956 37.6192 38.2557 37.6192 27.7333V24.0356Z" fill="#1E0606"/>
                 <path d="M46.4435 0H49.2301V49.2267H64.092V52H46.4435V0Z" fill="#1E0606"/>
                 <path d="M67.8074 0V51.7689H70.5941V27.3833L71.278 26.7025L96.0884 51.7689H100L73.2485 24.7414L98.1084 0H94.1675L70.5941 23.4612V0H67.8074Z" fill="#1E0606"/>
-            </svg>    
-        </a>            
+            </svg>   
+        </a>             
         <nav>
             <ul>
                 <li><a href="blog.html">Blog</a></li>
@@ -26,52 +26,89 @@
         <a href="#">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M14.3651 3.26001C10.9451 3.26001 8.16509 6.08001 8.16509 9.52001C8.16509 10.98 8.6651 12.3 9.4851 13.38L3.6051 19.32C3.2651 19.68 3.2651 20.24 3.6051 20.58C3.7851 20.76 4.0051 20.84 4.2251 20.84C4.4651 20.84 4.6851 20.76 4.8651 20.58L10.7451 14.62C11.7651 15.36 13.0051 15.78 14.3451 15.78C17.7651 15.78 20.5451 12.96 20.5451 9.52001C20.5651 6.06001 17.7851 3.26001 14.3651 3.26001ZM14.3651 14.2C11.8251 14.2 9.76509 12.1 9.76509 9.52001C9.76509 6.94001 11.8251 4.84001 14.3651 4.84001C16.9051 4.84001 18.9651 6.94001 18.9651 9.52001C18.9651 12.1 16.9051 14.2 14.3651 14.2ZM17.4651 9.60001C17.4251 9.94001 17.1251 10.2 16.7851 10.2C16.7451 10.2 16.7251 10.2 16.6851 10.2C16.3051 10.14 16.0451 9.80001 16.0851 9.42001C16.2251 8.38001 15.0651 7.84001 15.0051 7.82001C14.6651 7.66001 14.5051 7.24001 14.6651 6.90001C14.8251 6.56001 15.2251 6.40001 15.5851 6.54001C15.6651 6.56001 17.7451 7.52001 17.4651 9.60001ZM16.0051 11.12C16.1451 11.26 16.2451 11.48 16.2451 11.68C16.2451 11.9 16.1651 12.1 16.0051 12.24C15.8651 12.38 15.6451 12.48 15.4451 12.48C15.2451 12.48 15.0251 12.4 14.8851 12.24C14.7451 12.1 14.6451 11.88 14.6451 11.68C14.6451 11.48 14.7251 11.26 14.8851 11.12C15.0251 10.98 15.2451 10.88 15.4451 10.88C15.6451 10.88 15.8451 10.96 16.0051 11.12Z" fill="#1E0606"/>
-            </svg>     
-        </a>           
+            </svg>  
+        </a>              
         <a href="contact.html" class="">Contact Us</a>
     </header>     
     <main>
         <section class="breadcrumbs">
-            <h1>CONTACT US</h1> 
+            <h1>BLOG</h1>
 			<a href="#">Home</a>
-			<span>Contact Us</span>
+			<span>Blog</span>			
         </section>
-        
-        <section>
-            <h2 class="visually-hidden">form</h2>
-            <form action="#" method="POST">
-                <fieldset>
-                    <div>
-                        <label for="input-name">Name</label>
-                        <input type="text" id="input-name" placeholder="Ivan Ivanov">
+        <section class="cards">
+            <h2 class="visually-hidden">Cards</h2>
+            <ul>
+                <li>
+                    <div class="card" tabindex="0">
+                       <img src="images/blog1.jpg" alt="" width="380" height="220"> 
+                       <p class="card-date">23rd August 2018</p>
+                       <h2 class="card-name">Top 5 fastest growing it service companies in philly</h2>
+                       <p class="card-text">Direct Line Development’s Team is excited to announce that we received UpCity’s 2019 Local Excellence Award! This prestigious award is annually presented to the Top 1% of service providers in the given marketplace.</p>
                     </div>
-                </fieldset>
-                <fieldset>
-                    <div>
-                        <label for="input-phone">Phone</label>
-                        <input type="tel" id="input-phone">
+                </li>
+                <li>
+                    <div class="card" tabindex="0">
+                       <img src="images/blog2.jpg" alt="" width="380" height="220"> 
+                       <p class="card-date">23rd August 2018</p>
+                       <h2 class="card-name">Best financial</h2>
+                       <p class="card-text">Direct Line Development is honored to be recognized as one of the Top 100 Fastest Growing Companies 2019 in Philadelphia, according to Growjo’s ranking.</p>
                     </div>
-                    <div>
-                        <label for="input-email">Email</label>
-                        <input type="email" id="input-email">
+                </li>
+                <li>
+                    <div class="card" tabindex="0">
+                       <img src="images/blog3.jpg" alt="" width="380" height="220"> 
+                       <p class="card-date">23rd August 2018</p>
+                       <h2 class="card-name">Company logo or brand identity: which one is more important? brand identity</h2>
+                       <p class="card-text">To survive in the world of digital marketing, you need to keep up with the latest SEO trends. Here are our simple, but effective, SEO tips for small business success.</p>
                     </div>
-                </fieldset>
-                <fieldset>
-                    <label for="input-message">Message</label>
-                    <textarea id="input-message">Message</textarea>
-                </fieldset>
-                <fieldset>
-                    <input type="checkbox" id="input-consent">
-                    <label for="input-consent">By clicking on the button, you consent to the processing of your personal data</label>
-                </fieldset>
-                <input type="submit" value="SUBMIT">    
-            </form>
-            <div class="form-description">
-                <p>Our support team are on-hand to assist with any issues you are experiencing.</p>
-                <p>Please use the form to contact us with your needs. Send us a message and we'll respond as soon as possible.</p>
-                <p class="experts">An expert is waiting to help you!</p>
-            </div>
+                </li>
+                <li>
+                    <div class="card" tabindex="0">
+                       <img src="images/blog4.jpg" alt="" width="380" height="220"> 
+                       <p class="card-date">23rd August 2018</p>
+                       <h2 class="card-name">Best financial</h2>
+                       <p class="card-text">Direct Line Development is honored to be recognized as one of the Top 100 Fastest Growing Companies 2019 in Philadelphia, according to Growjo’s ranking.</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="card" tabindex="0">
+                       <img src="images/blog5.jpg" alt="" width="380" height="220"> 
+                       <p class="card-date">23rd August 2018</p>
+                       <h2 class="card-name">Company logo or brand identity: which one is more important? brand identity</h2>
+                       <p class="card-text">To survive in the world of digital marketing, you need to keep up with the latest SEO trends. Here are our simple, but effective, SEO tips for small business success.</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="card" tabindex="0">
+                       <img src="images/blog6.jpg" alt="" width="380" height="220"> 
+                       <p class="card-date">23rd August 2018</p>
+                       <h2 class="card-name">Top 5 fastest growing it service companies in philly</h2>
+                       <p class="card-text">Direct Line Development’s Team is excited to announce that we received UpCity’s 2019 Local Excellence Award! This prestigious award is annually presented to the Top 1% of service providers in the given marketplace.</p>
+                    </div>
+                </li>
+            </ul>
         </section>
+
+        <section class="pagination-bar">
+            <h2 class="visually-hidden">Pagination</h2>
+            <button>
+                <svg width="18" height="30" viewBox="0 0 18 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M16 2L3 15L16 28" stroke="#1E0606" stroke-opacity="0.12" stroke-width="4"/>
+                </svg>
+            </button>
+            <ul>
+                <li class="pagination-selected"><button>1</button></li>
+                <li class="pagination"><button>2</button></li>
+                <li class="pagination"><button>3</button></li>
+                <li class="pagination"><button>4</button></li>
+            </ul>    
+            <button>
+                <svg width="18" height="30" viewBox="0 0 18 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M2 2L15 15L2 28" stroke="#1E0606" stroke-opacity="0.12" stroke-width="4"/>
+                </svg>
+            </button>
+        </section>  
     </main>
     <footer>
         <div>
@@ -158,6 +195,6 @@
         <div>
             Web Design — <a href="#">Direct Line Development</a>
         </div>        
-    </footer>    
+    </footer>   
 </body>
 </html>
